2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IScope.cs:
	* IReadable.cs:
	* IWriteable.cs:
	* ZincOxide.csproj:
	* IValidateable.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IScope.cs:
	* IValidateable.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* EnumerableUtils.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* AcasType.cs:
	* AcasFunction.cs:
	* AcasOperator.cs:
	* AcasVariable.cs:
	* AcasConstant.cs:
	* AcasIExpression.cs:
	* AcasExpressionBase.cs:
	* AcasGenericFunction.cs:
	* AcasFunctionInstance.cs:
	* AcasBinaryOperatorFlags.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IReadable.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.lex:
	* IReadable.cs:
	* IWriteable.cs:
	* Interaction.cs:
	* ReadWriteableUtils.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* AcasType.cs:
	* MiniZinc.cs:
	* HeadTail.cs:
	* Manpage.txt:
	* MiniZinc.lex:
	* SetLiteral.cs:
	* FloatRange.cs:
	* Interaction.cs:
	* MiniZinc.bison:
	* AcasFunction.cs:
	* IntegerRange.cs:
	* AcasConstant.cs:
	* AcasVariable.cs:
	* AcasOperator.cs:
	* FourStateLogic.cs:
	* AcasIExpression.cs:
	* ThreeValueLogic.cs:
	* EvaluationResult.cs:
	* CompilerVerbosity.cs:
	* AcasExpressionBase.cs:
	* AcasGenericFunction.cs:
	* AcasFunctionInstance.cs:
	* AcasBinaryOperatorFlags.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* EnumerableUtils.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincException.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IName.cs:
	* NameBase.cs:
	* HeadTail.cs:
	* ZincIdent.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* HeadTail.cs:
	* ZincData.cs:
	* ZincItem.cs:
	* ZincType.cs:
	* IZincItem.cs:
	* ZincModel.cs:
	* ZincIName.cs:
	* ZincIScope.cs:
	* ZincScalar.cs:
	* MiniZinc.bison:
	* ZincInstance.cs:
	* ZincEnumItem.cs:
	* ZincCompound.cs: