@@ -99,6 +99,11 @@
     <Compile Include="Codegen\ICodeClass.cs" />
     <Compile Include="Codegen\ICodeMethod.cs" />
     <Compile Include="Codegen\INamespace.cs" />
+    <Compile Include="MiniZinc\ZincScalarType.cs" />
+    <Compile Include="MiniZinc\IZincTypeInstAndIdentBox.cs" />
+    <Compile Include="MiniZinc\ZincTypeInstAndIdent.cs" />
+    <Compile Include="MiniZinc\IZincTypeInstExpressionBox.cs" />
+    <Compile Include="MiniZinc\ZincTypeInstExpressionBoxBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
