@@ -1,5 +1,16 @@
 2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* IZincIdentBox.cs:
+	* ZincScalarType.cs:
+	* ZincVarDeclItem.cs:
+	* ZincTypeInstAndIdent.cs:
+	* IZincTypeInstAndIdentBox.cs:
+	* ZincTypeInstBaseExpression.cs:
+	* IZincTypeInstExpressionBox.cs:
+	* ZincTypeInstExpressionBoxBase.cs: 
+
+2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* IZincItem.cs:
 	* ZincModel.cs:
 	* IZincType.cs:
