@@ -1,5 +1,9 @@
 2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* ZincOxide.csproj: 
+
+2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* IScope.cs:
 	* IReadable.cs:
 	* IWriteable.cs:
